add string resource for Nama

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">QuestNavigasi</string>
+    <string name="Nama">Tasnim Fadilah Anwar</string>
 </resources>
