add string resource for NIM

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">QuestNavigasi</string>
     <string name="Nama">Tasnim Fadilah Anwar</string>
+    <string name="NIM">20230140240</string>
 </resources>
