add string resource 'welcome'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">QuestNavigasi</string>
     <string name="Nama">Tasnim Fadilah Anwar</string>
     <string name="NIM">20230140240</string>
+    <string name="welcome">Selamat Datang</string>
+
 </resources>
