--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="Nama">Tasnim Fadilah Anwar</string>
     <string name="NIM">20230140240</string>
     <string name="welcome">Selamat Datang</string>
+    <string name="submit">Submit</string>
 
 </resources>
