add string resource 'nama_lengkap'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="NIM">20230140240</string>
     <string name="welcome">Selamat Datang</string>
     <string name="submit">Submit</string>
+    <string name="nama_lengkap">NAMA LENGKAP</string>
 
 </resources>
