add string resource 'formulir'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="jenis_kelamin">JENIS KELAMIN</string>
     <string name="alamat">ALAMAT</string>
     <string name="beranda">Beranda</string>
+    <string name="formulir">Formulir Pendaftaran</string>
+
 </resources>
