add string resource 'status'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,5 @@
     <string name="alamat">ALAMAT</string>
     <string name="beranda">Beranda</string>
     <string name="formulir">Formulir Pendaftaran</string>
-
+    <string name="status">STATUS PERKAWINAN</string>
 </resources>
