--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="beranda">Beranda</string>
     <string name="formulir">Formulir Pendaftaran</string>
     <string name="status">STATUS PERKAWINAN</string>
+    <string name="list">List Daftar Peserta</string>
 </resources>
